feat: Flink 剩余四个 job 真实跑通并纳入 e2e 验证（retention / funnels×2 / identity-merge / risk）
按 enrich/sessions 同套路打通：fatJar（各自 Main-Class，funnels 同 jar 双 main 用 -cp 区分）
→ compose 五个新服务（9 个 --add-opens 模板）→ e2e-verify 新增 10-15 节，38/0 全绿：
- retention：首事件即 emit d=0 → retention_daily 落库
- funnels：level_start/level_complete → funnels_2step started/completed 双基线增长
- configurable-funnels：从 control PG（funnel_analyses/funnel_steps）加载漏斗配置 →
  funnels_configurable step1/step2 落库（verify 幂等铺配置后 force-recreate 重载）
- identity-merge：identity 事件 → CH identities + Kafka identity_events 双写
- risk：THRESHOLD 规则（resource_amount 超阈值立即触发）→ CH risk_events + topic 增长

真实跑通过程中修掉的运行时缺陷（均已复现验证）：
- RetentionPolicy/FunnelConfig/FunnelStep 不可序列化（闭包捕获直接 NotSerializableException）
- RetentionEmit 的 LocalDate 字段走 Kryo 反射需 --add-opens java.base/java.time，
  裸 JVM 炸 InaccessibleObjectException → 改 long epochDay
- RetentionEmit/FunnelRow 包私有 → Flink 退化 Kryo 泛型序列化 → 改 public POJO
- ConfigurableFunnelsJob 硬编码查不存在的 funnel_configs 表 → 适配 control 真实迁移
  （V0.3.3 funnel_analyses/funnel_steps；funnel_steps 后续迁移补加的 name/funnel_id
  NOT NULL 列需在种子数据显式赋值）
- IdentityMergeJob 用 split('||', ?)——ClickHouse 无 split 函数（实测 24.8
  UNKNOWN_FUNCTION）→ splitByString
- fatJar 合并依赖覆盖 META-INF/services 致 DriverManager 注册不到 PG 驱动 → 显式 Class.forName
- configurable-funnels-schema.sql 两处 CH 24.8 不兼容 DDL（JOIN ON 跨表列比较、
  相关子查询），initdb 在此中断导致可配置漏斗表缺失 → CROSS JOIN + 窗口函数等价改写
- e2e-verify 第 10 节新增 CH schema 幂等重放（initdb 只在空卷跑，缺表自愈；
  只重放三个幂等文件，ltv/crash/queries* 含裸 DDL 不纳入）

Co-Authored-By: Claude Code <noreply@anthropic.com>